--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Babylon.js Dummy Viewer</title>
+    <meta charset="UTF-8">
+    <title>Growball Viewer</title>
     <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <style>
-      html, body { margin: 0; height: 100%; overflow: hidden; }
-      canvas { width: 100%; height: 100%; display: block; }
+      html, body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        height: 100%;
+      }
+      canvas {
+        width: 100%;
+        height: 100%;
+        touch-action: none;
+        display: block;
+      }
     </style>
   </head>
   <body>
@@ -15,21 +27,16 @@
       const engine = new BABYLON.Engine(canvas, true);
       const scene = new BABYLON.Scene(engine);
 
-      const camera = new BABYLON.ArcRotateCamera("camera",
-        Math.PI / 2, Math.PI / 3, 5, BABYLON.Vector3.Zero(), scene);
-      camera.attachControl(canvas, true);
+      // Append growball model to scene
+      BABYLON.SceneLoader.Append("assets/models/", "growball-split-horizontal-bolt-large-6inches_optimize.glb", scene, function () {
+        scene.createDefaultCameraOrLight(true, true, true);
+      });
 
-      const light = new BABYLON.HemisphericLight("light",
-        new BABYLON.Vector3(1, 1, 0), scene);
-
-      const sphere = BABYLON.MeshBuilder.CreateSphere("sphere",
-        { diameter: 2 }, scene);
-
-      engine.runRenderLoop(() => {
+      engine.runRenderLoop(function () {
         scene.render();
       });
 
-      window.addEventListener("resize", () => {
+      window.addEventListener("resize", function () {
         engine.resize();
       });
     </script>
